# mull

./: Final_3.py
Lenas_Shitt/: CMakeLists.txt  Voc3 copy.csv  Voc3.csv  Voc4 .csv  Voc5.csv  Voc6 copy.csv  Voc6.csv  list.hpp  list.ipp  node.hpp  node.ipp  voc_trainer.cpp
Numerik/: Gauss.py  Gauss_Seidel.py  bisection_method.py  lim_bisection_method.py  p108_no32.py  p91_no7.py
Numerik/Final/: adams-bashforth.py  explicit_difference_scheme.py  explicit_difference_scheme_copy.py  runge-kutta-method.py
Numerik/Midterm/: Aposteriori.py  Apriori.py  Blatt12_Bohnhoff_Delija_Siemer.py  Cholesky.py  FixedPointIteration.py  Lu.py  Midterm.txt  NewtonMethod.py  RiddersMethod.py  Sonstiges.py  bisection_method.py
python/: a.out  hello.txt
